# project-vela

./: .gitignore  README.md  pyproject.toml
.obsidian/: community-plugins.json  graph.json  workspace.json
agents/planner/: README.md
agents/reflector/: README.md
agents/router/: README.md
agents/scribe/: README.md
agents/warden/: README.md
agents/worker/: README.md
apps/pi-adapter/: README.md
core/: Cargo.toml  lib.rs
core/events/: mod.rs
knowledge/: 000.INDEX.Knosence-Matrix-Ref.md  001.INDEX.Matrix-Laws-Ref.md  002.INDEX.Vela-Matrix-Constitution-Ref.md  100.WHO.Circle-SoT.md  100.WHO.Vela-Identity-SoT.md  110.WHO.Vela-Identity-SoT.md  111.VELA.Capabilities-SoT.md  111.WHO.Custom-Vela-Identity-SoT.md  200.WHAT.Domain-SoT.md  200.WHAT.Vela-Capabilities-SoT.md  230.DOMAIN.SoT-Source-of-Truth-SoT.md  230b.DOMAIN.Core-Directives-Ref.md  230c.DOMAIN.Index-Layer-Ref.md  240.DOMAIN.Matrix-SoT.md  240a.DOMAIN.SoT-Operations-Ref.md  240c.DOMAIN.n8n-Integration-Ref.md  240e.DOMAIN.Profile-Replacement-Ref.md  240g.DOMAIN.Architecture-Overview-Ref.md  240h.DOMAIN.CI-Commands-Ref.md  240j.DOMAIN.Merge-and-Growth-Ref.md  240k.DOMAIN.Local-Service-Deploy-Ref.md  240l.DOMAIN.Telegram-Integration-Ref.md  300.WHERE.Terrain-SoT.md  400.WHEN.Chronicle-SoT.md  500.HOW.Method-SoT.md  600.WHY.Compass-SoT.md  600.WHY.Vela-Intent-SoT.md  610.WHY.Vela-Intent-SoT.md  Cornerstone.Knosence-SoT.md  WHAT.Repo-Watchlist-SoT.md  WHAT.Vela-Capabilities-SoT.md  WHO.Test-Custom-Identity-SoT.md  WHO.Vela-Identity-SoT.md  WHY.Vela-Intent-SoT.md
prototypes/: __init__.py
(+151 files in other folders)
