[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-vela"
version = "0.1.0"
description = "Vela-first governed assistant runtime and verification harness"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "prototypes/python"}

[tool.setuptools.packages.find]
where = ["prototypes/python"]

